--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "typecheck": "pnpm -r typecheck",
     "changeset-version": "changeset version",
@@ -11,12 +14,12 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.2",
     "@changesets/cli": "^2.29.8",
-    "@types/node": "^25.2.3",
+    "@types/bun": "latest",
     "@typescript/native-preview": "7.0.0-dev.20260216.1",
     "typescript": "^5.9.3"
   },
   "engines": {
-    "node": ">=23"
+    "bun": ">=1.1.0"
   },
   "keywords": [],
   "author": "",
