refactor: remove effect for yargs

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "packages/*"
   ],
   "scripts": {
-    "typecheck": "pnpm -r typecheck",
+    "typecheck": "bun --workspaces typecheck",
     "changeset-version": "changeset version",
     "changeset-publish": "pnpm build && pnpm vitest && changeset publish && changeset tag && git push --tags"
   },
