--- a/packages/huab/package.json
+++ b/packages/huab/package.json
@@ -13,23 +13,22 @@
     "dev": "bun run src/bin.ts --watch",
     "build": "bun run ./scripts/build-binaries.ts",
     "postbuild": "bun run scripts/inject-constant.ts",
-    "prepare": "effect-language-service patch",
     "clean": "rm -rf dist/*",
-    "typecheck": "tsc -b tsconfig.json",
+    "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "format": "echo 'use oxc",
     "lint": "echo 'use oxc'"
   },
   "devDependencies": {
-    "@effect/cli": "^0.72.1",
-    "@effect/language-service": "latest",
-    "@effect/platform": "^0.93.6",
-    "@effect/platform-node": "^0.103.0",
-    "@effect/vitest": "^0.27.0",
+    "@types/bun": "^1.3.9",
+    "@types/node": "^25.2.3",
+    "@types/yargs": "^17.0.35",
     "@typescript/native-preview": "7.0.0-dev.20260216.1",
-    "effect": "^3.19.9",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.15"
+  },
+  "dependencies": {
+    "yargs": "^18.0.0"
   }
 }
