--- a/packages/huab/tsconfig.json
+++ b/packages/huab/tsconfig.json
@@ -5,8 +5,15 @@
     "jsx": "preserve",
     "jsxImportSource": "@opentui/solid",
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
-    "types": [],
+    "types": ["@types/bun"],
     "noUncheckedIndexedAccess": false,
+    "resolveJsonModule": true,
+
+    // Native Node support
+    "allowImportingTsExtensions": true,
+    "rewriteRelativeImportExtensions": true,
+    "erasableSyntaxOnly": true,
+    "verbatimModuleSyntax": true,
     "paths": {
       "@/*": ["./src/*"]
     }
