--- a/packages/huab/package.json
+++ b/packages/huab/package.json
@@ -20,6 +20,7 @@
     "lint": "echo 'use oxc'"
   },
   "devDependencies": {
+    "@tsconfig/bun": "^1.0.10",
     "@types/bun": "^1.3.9",
     "@types/node": "^25.2.3",
     "@types/yargs": "^17.0.35",
