--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "huab": "bun --filter huab",
+    "huab:cwd": "bun run --cwd packages/huab",
     "typecheck": "bun --workspaces typecheck",
     "changeset-version": "changeset version",
     "changeset-publish": "pnpm build && pnpm vitest && changeset publish && changeset tag && git push --tags"
