--- a/packages/huab/package.json
+++ b/packages/huab/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "dev": "bun run src/bin.ts --watch",
-    "generate:types": "echo 'todo'",
+    "gen:openapi": "bun run ./scripts/gen-openapi.ts",
     "build": "bun run ./scripts/build-binaries.ts",
     "postbuild": "bun run scripts/inject-constant.ts",
     "clean": "rm -rf dist/*",
@@ -31,6 +31,10 @@
     "vitest": "^4.0.15"
   },
   "dependencies": {
-    "yargs": "^18.0.0"
+    "@orpc/contract": "^1.13.5",
+    "@orpc/openapi": "^1.13.5",
+    "@orpc/zod": "^1.13.5",
+    "yargs": "^18.0.0",
+    "zod": "^4.3.6"
   }
 }
