--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.2",
     "@changesets/cli": "^2.29.8",
-    "@types/bun": "latest",
-    "@typescript/native-preview": "7.0.0-dev.20260216.1",
+    "@types/bun": "^1.3.9",
+    "@typescript/native-preview": "7.0.0-dev.20260217.1",
     "typescript": "^5.9.3"
   },
   "engines": {
