--- a/packages/huab/tsconfig.json
+++ b/packages/huab/tsconfig.json
@@ -2,9 +2,10 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@tsconfig/bun/tsconfig.json",
   "compilerOptions": {
-    "jsx": "preserve",
-    "jsxImportSource": "@opentui/solid",
+    "jsx": "react-jsx",
+    "jsxImportSource": "@opentui/react",
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "allowJs": true,
     "types": ["@types/bun"],
     "noUncheckedIndexedAccess": false,
     "resolveJsonModule": true,
