feat: improve build script

--- a/packages/huab/package.json
+++ b/packages/huab/package.json
@@ -13,7 +13,7 @@
     "dev": "bun run src/bin.ts --watch",
     "gen:openapi": "bun run --elide-lines=0 ./scripts/gen-openapi.ts",
     "build": "bun run ./scripts/build-binaries.ts",
-    "postbuild": "bun run scripts/inject-constant.ts",
+    "build:single": "bun run ./scripts/build-binaries.ts --single --skip-install",
     "clean": "rm -rf dist/*",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
