chore(deps): add @huab/lib workspace dependency and update lockfile
Adds @huab/lib as a workspace dependency of packages/huab so the
Flatpak HTTP endpoints can import FlatpakClient at runtime. Also
refreshes pnpm-lock.yaml to reflect the new workspace link and updated
package resolutions (TypeScript native preview bump, changeset tooling
added at root, dbus-next wired into both lib and huab).

--- a/packages/huab/package.json
+++ b/packages/huab/package.json
@@ -32,6 +32,7 @@
     "vitest": "^4.0.18"
   },
   "dependencies": {
+    "@huab/lib": "workspace:*",
     "@opentui/core": "^0.1.80",
     "@opentui/react": "^0.1.80",
     "@orpc/contract": "^1.13.5",
