--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -7,7 +7,8 @@
     ".": "./src/index.ts"
   },
   "scripts": {
-    "service": "bun run src/daemon.ts",
+    "build:daemon": "bun build src/daemon.ts --target=node --format=esm --external 'gi://*' --external 'system' --outfile dist/daemon.js",
+    "service": "pnpm build:daemon && gjs -m dist/daemon.js",
     "typecheck": "tsc --noEmit",
     "build": "echo 'To be worked on'"
   },
@@ -15,6 +16,11 @@
     "dbus-next": "^0.10.2"
   },
   "devDependencies": {
+    "@girs/flatpak-1.0": "^1.16.1-4.0.0-beta.38",
+    "@girs/gio-2.0": "^2.86.0-4.0.0-beta.38",
+    "@girs/gjs": "^4.0.0-beta.38",
+    "@girs/glib-2.0": "^2.86.0-4.0.0-beta.38",
+    "@girs/glibunix-2.0": "^2.0.0-4.0.0-beta.38",
     "@tsconfig/bun": "^1.0.10",
     "@types/bun": "^1.3.9",
     "typescript": "^5.9.3"
