--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -10,7 +10,10 @@
     "build:daemon": "bun build src/daemon.ts --target=node --format=esm --external 'gi://*' --external 'system' --outfile dist/daemon.js",
     "service": "pnpm build:daemon && gjs -m dist/daemon.js",
     "typecheck": "tsc --noEmit",
-    "build": "echo 'To be worked on'"
+    "build": "echo 'To be worked on'",
+    "lint": "oxlint --type-aware src",
+    "lint:fix": "oxlint --type-aware --fix src",
+    "format": "oxfmt src"
   },
   "dependencies": {
     "dbus-next": "^0.10.2"
