--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format": "bun --workspaces format",
     "typecheck": "bun --workspaces typecheck",
     "changeset-version": "changeset version",
-    "changeset-publish": "pnpm build && pnpm vitest && changeset publish && changeset tag && git push --tags"
+    "changeset-publish": "bun build && bun vitest && changeset publish && changeset tag && git push --tags"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.2",
@@ -34,5 +34,4 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.24.0"
 }
